# NestEO

./: .gitignore  CHANGELOG.md  HENARCGrid.txt  README.md  Requirements.txt  install_and_run.txt  pyproject.toml
.github/workflows/: ci.yml
configs/: esa_lc_download_config.yaml  esa_lc_props_config.yaml  esa_lc_props_filter_config.yaml  extract_esa_lc_tiles.yaml  grid_extra_level_config.yaml  grid_filtered_level_config.yaml  grid_full_config.yaml  grid_full_zones_config.yaml  grid_index_config.yaml  structure.yaml  structure_config.yaml
examples/: Evalutations_Scoring_View.ipynb  NestEO_calculate_lc_props_tiles.ipynb  NestEO_grids_to_centroids.ipynb  Progressive_active_subset_selections.ipynb
scripts/: Code_Tests.ipynb  create_NestEO_repo_scaffold.py  create_and_load_structure.py  create_henarcmeo_repo_scaffold.py  delete_esa_lc.py  esa_lc_downloader.py  generate_extra_grids.py  generate_filtered_grids.py  generate_grid.py  generate_grid_index.py  generate_grids.py  grid_lc_computations.py
src/NestEO/: __init__.py
src/NestEO/annotations/: extract_esa_wc_tiles.py
src/NestEO/core/: __init__.py  main.py  structure.py
src/NestEO/eo_datasets/: Wyvern_Satellite_data_download.ipynb
src/NestEO/extra/: extra_grids_generation.py
src/NestEO/grid/: __init__.py  grid_generator.py  grid_utils.py
src/henarcmeo/: __init__.py
src/henarcmeo/aux_datasets/: delete_esa_lc.py  esa_lc_downloader.py  esa_lc_raster_outlines.py  grid_lc_computations.py  utils_aux.py
src/henarcmeo/configs/: esa_lc_config.yaml  esa_lc_download_config.yaml  esa_lc_props_config.yaml  (+2 more)
(+8 files in other folders)
