[project]
name = "NestEO"
version = "0.0.1"
description = "Nested and Aligned Earth Observation Framework with Multimodal Dataset"
readme = "README.md"
authors = [{name = "---"}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
geo = ["geopandas", "shapely", "pyproj", "rasterio"]
hf  = ["huggingface-hub", "dask", "dask[dataframe]"]
others = ["gdown", "scikit-learn", "tqdm", "yaml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

